# axum-shop

./: .example.yaml  .gitignore  Cargo.toml  README.md  application.example.yaml  gin  rbac_domains.conf  redis-cluster.yaml
admin/: Cargo.toml
admin/src/: main.rs
admin/src/controller/: address.rs  auth.rs  categories.rs  coupons.rs  mod.rs  order.rs  products.rs  rabbitmq.rs  role_permission.rs  user.rs
admin/src/jobs/: calculate_fine.rs  mod.rs
admin/src/middleware/: casbin.rs  mod.rs
admin/src/models/: address.rs  auth.rs  cart_items.rs  categories.rs  coupons.rs  crowdfunding.rs  favorite_products.rs  installment_items.rs  installments.rs  mod.rs  order_items.rs  orders.rs  product_property.rs  product_skus.rs  products.rs  role_permission.rs  user.rs
admin/src/router/: admin.rs  home.rs  mod.rs
common/: Cargo.toml
common/src/: application.rs  error.rs  lib.rs
common/src/request/: address.rs  auth.rs  categories.rs  coupon.rs  mod.rs  order.rs  products.rs  role_permission.rs  user.rs
common/src/response/: address.rs  mod.rs  user.rs
common/src/utils/: casbin.rs  elasticsearch.rs  jwt.rs  mod.rs  pgsql.rs  pwd.rs  rabbitmq.rs  redis.rs  snowflake.rs  tree.rs
config/: .env.example  rbac_domains.conf
macros/: Cargo.toml
macros/src/: error.rs  lib.rs  macros.rs  params.rs
pay/: Cargo.toml
pay/src/: alipay.rs  cert.rs  lib.rs
web/: Cargo.toml  tls.sh
web/src/: main.rs
