[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.22.5", features = ["full"] }
axum = { version = "0.6.6", features = ["multipart", "ws", "headers"] }
serde_json = { version = "1.0.93" }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.2.0"
log = "0.4.17"
#fast_log = { version = "1.5", features = ["zip", "gzip"] }
#tracing_subscriber = { version = "0.3", default-features = false, features = ["alloc"] }
#tracing = "0.1"
percent-encoding = "2.2.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "decimal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16" }
validator = { version = "0.15.0", features = ["derive", "phone"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
tower = { version = "0.4.13", features = ["full"] }
casbin = { version = "2.0.9", features = ["incremental", "cached"] }
futures = "0.3.26"
bytes = "1.4.0"
http = "0.2.8"
http-body = "0.4.5"
random = "0.13.2"
