[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.22.5", features = ["full"] }
axum = { version = "0.6.6", features = ["multipart", "ws", "headers"] }
serde_json = { version = "1.0.93" }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.2.0"
tracing = { version = "0.1.37"}
tracing-subscriber = { version = "0.3.16",features = ["alloc"] }
percent-encoding = "2.2.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "decimal", "all-types"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
tower = { version = "0.4.13", features = ["full"] }
casbin = { version = "2.0.9", features = ["incremental", "cached"] }
futures = "0.3.26"
bytes = "1.4.0"
http = "0.2.8"
http-body = "0.4.5"
random = "0.13.2"
lapin = "2.1.1"