[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
axum = { version = "0.6.9", features = ["multipart", "ws"] }
serde_json = { version = "1.0.93" }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
chrono = { version = "0.4.23", features = ["unstable-locales"] }
validator = { version = "0.15", features = ["derive", "phone", "unic"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
md5 = "0.7.0"
lazy_static = "1.4.0"
jsonwebtoken = "8.2.0"
async_once = "0.2.6"
tower = { version = "0.4.13", features = ["full"] }
casbin = { version = "2.0.9", features = ["incremental", "cached"] }
futures = "0.3.26"
bytes = "1.4.0"
http = "0.2.8"
http-body = "0.4.5"
redis = { version = "0.22.3", features = ["tokio-comp", "json", "serde_json", "r2d2"] }
r2d2_redis = { version = "0.14.0" }
url = { version = "2.3.1", features = ["serde"] }
regex = "1.7.1"
lapin = "2.1.1"