[package]
name = "pay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.1", features = ["full"]}
serde_json = "1.0.104"
serde = {version = "1.0.180", features = ["derive"]}
openssl = { version = "0.10" , features = ["vendored"]}
serde_urlencoded = "0.7.1"
hex = "0.4.3"
chrono = "0.4.26"
reqwest = { version = "0.11", features = ["json"] }