[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
axum = { version = "0.6", features = ["multipart", "ws"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
redis = { version = "0.22", features = ["tokio"] }
jsonwebtoken = "8.2"
log = "0.4"
fast_log = { version = "1.5", features = ["zip", "gzip"] }
percent-encoding = "2.2"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }